21 February 2007: Wouter
	- put -c option in man page.
	- minievent fd array capped by FD_SETSIZE.

20 February 2007: Wouter
	- Added locks code and pthread spinlock detection.
	- can use no locks, or solaris native thread library.
	- added yacc and lex configure, and config file parsing code.
	  also makedist.sh, and manpage.
	- put include errno.h in config.h

19 February 2007: Wouter
	- Created 0.0 svn tag.
	- added acx_pthread.m4 autoconf check for pthreads from 
	  the autoconf archive. It is GPL-with-autoconf-exception Licensed.
	  You can specify --with-pthreads, or --without-pthreads to configure.

16 February 2007: Wouter
	- Updated testbed script, works better by using make on remote end.
	- removed check decls, we can compile without them.
	- makefile supports LIBOBJ replacements.
	- docs checks ignore compat code.
	- added util/mini-event.c and .h, a select based alternative used with
	  ./configure --with-libevent=no
	  It is limited to 1024 file descriptors, and has less features.
	- will not create ip6 sockets if ip6 not on the machine.

15 February 2007: Wouter
	- port to FreeBSD 4.11 Dec Alpha. Also works on Solaris 10 sparc64,
	  Solaris 9, FreeBSD 6, Linux i386 and OSX powerpc.
	- malloc rndstate, so that it is aligned for access.
	- fixed rbtree cleanup with postorder traverse.
	- fixed pending messages are deleted when handled.
	- You can control verbosity; default is not verbose, every -v
	  adds more verbosity.

14 February 2007: Wouter
	- Included configure.ac changes from ldns.
	- detect (some) headers before the standards check.
	- do not use isblank to test c99, since its not available on solaris9.
	- review of testcode.
		* entries in a RANGE are no longer reversed.
		* print name of file with replay entry parse errors.
	- port to OSX: cast to int for some prints of sizet.
	- Makefile copies ldnstestpkts.c before doing dependencies on it.

13 February 2007: Wouter
	- work on fake events, first fwd replay works.