@@ -567,8 +567,8 @@ struct sockaddr_storage;
 
 #include "ldns/ldns.h"
 
-/** default port to listen for queries, passed to getaddrinfo */
-#define UNBOUND_DNS_PORT "53"
+/** default port for DNS traffic. */
+#define UNBOUND_DNS_PORT 53
 ])
 
 AC_CONFIG_FILES([Makefile])
