@@ -1,0 +1,54 @@
+#
+# Example configuration file.
+#
+# See unbound.conf(5) man page.
+#
+# this is a comment.
+
+#Use this to include other text into the file.
+#include: "otherfile.conf"
+
+# The server clause sets the main parameters. 
+server:
+	# whitespace is not necessary, but looks cleaner.
+
+	# verbosity number, 0 is least verbose.
+	verbosity: 2
+	
+	# number of threads to create. 1 disables threading.
+	# num-threads: 1
+
+	# port to answer queries from
+	# port: 53
+
+	# unbound needs to send packets to authoritative nameservers.
+	# it uses a range of ports for that.
+	# the start number of the port range
+	# outgoing-port: 1053
+
+	# number of port to allocate per thread, determines the size of the
+	# port range. A larger port range gives more resistance to certain
+	# spoof attacks, as it gets harder to guess which port is used. 
+	# But also takes more system resources (for open sockets).
+	# outgoing-range: 16
+
+	# Enable IPv4, "yes" or "no".
+	# do-ip4: yes
+
+	# Enable IPv6, "yes" or "no".
+	# do-ip6: yes
+
+	# Enable UDP, "yes" or "no".
+	# do-udp: yes
+
+	# Enable TCP, "yes" or "no".
+	# do-tcp: yes
+
+	# Set this to configure unbound to act as a forwarder. All queries are
+	# sent to the remote nameserver that will resolve them.
+	# Set to "" to disable forwarding, or give ip-address to enable.
+	# forward-to: ""
+
+	# The port number to send forwarded queries to.
+	# forward-to-port: 53
+
