@@ -1,3 +1,7 @@
+22 February 2007: Wouter
+	- Have a config file. Removed commandline options, moved to config.
+	- tests use config file.
+
 21 February 2007: Wouter
 	- put -c option in man page.
 	- minievent fd array capped by FD_SETSIZE.
